# adhanapp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  config.toml  install.sh
.github/workflows/: release.yml  rust.yml
src/: main.rs
