[package]
repository = "https://github.com/ahmedjama/adhanapp"
name = "adhanapp"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
home = "0.5"
tokio = { version = "1", features = ["full"] }
rodio = "0.17"
chrono = "0.4.31"
rand = "0.8"
toml = "0.8"

[workspace.metadata.dist.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH", 
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH alsa-base alsa-utils libasound2-dev"
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = false


[workspace.metadata.dist.dependencies.apt]
alsa-base = '*'
alsa-utils = '*'
libasound2-dev = '*'  

#alsa-base = { targets = ["aarch64-pc-windows-msvc"] }
#alsa-utils = { targets = ["aarch64-pc-windows-msvc"] }
#libasound2-dev = { version = '3.27.6', targets = ["aarch64-pc-windows-msvc"] }
